LPS-131629 Our normal pattern
