# modules/apps/object/object-rest-impl/src/main/java/com/liferay/object/rest/internal/resource/v1_0/ObjectEntryResourceImpl.java
@@ -114,7 +114,7 @@ public class ObjectEntryResourceImpl extends BaseObjectEntryResourceImpl {
 	}
 
 	@Override
-	public ObjectEntry postObjectEntrySite(Long siteId, ObjectEntry objectEntry)
+	public ObjectEntry postSiteObjectEntry(Long siteId, ObjectEntry objectEntry)
 		throws Exception {
 
 		return _toObjectEntry(
